# finance-agent

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: backtester.md  data-engineer.md  lit-scout.md  portfolio-constructor.md  portfolio-reporter.md  quant-researcher.md  red-team-quant.md
ledger/: strategies.jsonl
reports/: absorption_ratio_analysis.json  cycle_11_report.md  cycle_12_report.md  cycle_1_report.md  cycle_4_report.md  cycle_5_report.md  cycle_8_report.md  cycle_9_report.md  eval_gross_profitability_ls.json  eval_ivrv_monthly_timer.json  eval_lowvol_idio_beta_neutral.json  eval_tom_tilt_spy.json  eval_tsmom_barbell_etf.json  eval_xasset_defensive_breadth.json  eval_zumbach_vol_overlay.json  voltarget_pathmemory_analysis.json  zumbach_analysis.json
research/: cross_domain_ideation.md  data_catalog.md  pivots.md  portfolio_v1.md  process_retro.md  progress.md  strategy_backlog.md
research/charts/: cycle_trends.json  (+1 more)
runs/: INDEX.md
scripts/: build_risk_managed_portfolio.py  plot_cycle_trends.py
strategies/: absorption_ratio_timer.py  composite_multifactor_pit.py  diffusion_regime_timer.py  example_xs_momentum.py  gross_profitability_ls.py  gross_profitability_pit.py  ivrv_monthly_timer.py  lowvol_idio_beta_neutral.py  tom_tilt_spy.py  tsmom_barbell_etf.py  value_earnings_yield_pit.py  voltarget_pathmemory.py  voltarget_spy.py  xasset_defensive_breadth.py  xs_reversal_idio_5d.py  zumbach_vol_overlay.py
tests/: test_data_reliability.py  test_edgar.py  test_edgar_text.py  test_harness.py  test_universe.py
(+47 files in other folders)
